WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158357
Clients of PolymorphicAccess::addCases shouldn't have to malloc
https://bugs.webkit.org/show_bug.cgi?id=158357
Summary
Clients of PolymorphicAccess::addCases shouldn't have to malloc
Geoffrey Garen
Reported
2016-06-03 14:18:36 PDT
Clients of PolymorphicAccess::addCases shouldn't have to malloc
Attachments
Patch
(3.53 KB, patch)
2016-06-03 14:23 PDT
,
Geoffrey Garen
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-06-03 14:23:45 PDT
Created
attachment 280464
[details]
Patch
Keith Miller
Comment 2
2016-06-03 14:24:59 PDT
Comment on
attachment 280464
[details]
Patch r=me.
Geoffrey Garen
Comment 3
2016-06-03 14:25:30 PDT
Committed
r201657
: <
http://trac.webkit.org/changeset/201657
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug