Clients of PolymorphicAccess::addCases shouldn't have to malloc https://bugs.webkit.org/show_bug.cgi?id=158357

Reviewed by Keith Miller.

We only ever have 1 or 2 cases, so we can use inline Vector capacity.

This shows up a little in the JSBench profile.

* bytecode/PolymorphicAccess.cpp:
(JSC::PolymorphicAccess::addCases):
(JSC::PolymorphicAccess::addCase):
* bytecode/PolymorphicAccess.h:
* bytecode/StructureStubInfo.cpp:
(JSC::StructureStubInfo::addAccessCase):


Canonical link: https://commits.webkit.org/176443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201657 268f45cc-cd09-0410-ab3c-d52691b4dbfc